force-app/main/default/objects/Project_Technology__c/Project_Technology__c.object-meta.xml
<CustomObject>
    <label>Project Technology</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Project Technology Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Technologies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>