force-app/main/default/objects/Project_Technology__c/fields/Expertise_Required__c.field-meta.xml
<CustomField>
    <fullName>Expertise_Required__c</fullName>
    <label>Expertise Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>