force-app/main/default/objects/Project_Technology__c/fields/Takeaways__c.field-meta.xml
<CustomField>
    <fullName>Takeaways__c</fullName>
    <label>Takeaways</label>
    <type>TextArea</type>
</CustomField>