force-app/main/default/objects/Project_Technology__c/fields/Technology_Rating__c.field-meta.xml
<CustomField>
    <fullName>Technology_Rating__c</fullName>
    <label>Technology Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>