force-app/main/default/objects/Project_Technology__c/validationRules/TechnologyRatingValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>TechnologyRatingValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(TEXT(Technology_Rating__c),&quot;([1-5]{1})&quot;))</errorConditionFormula>
    <errorDisplayField>Technology_Rating__c</errorDisplayField>
    <errorMessage>Put Numbers between 1 to 5</errorMessage>
</ValidationRule>